pazcal-quads/Parser.output
   0  $accept : %entry% $end

   1  pmodule : initialization declaration_list T_eof

   2  initialization :

   3  declaration_list :
   4                   | declaration declaration_list

   5  declaration : const_def
   6              | var_def
   7              | routine
   8              | program

   9  const_inner_def : T_name T_eq const_expr

  10  const_def : T_const ptype const_inner_def const_def_list T_semicolon

  11  const_def_list :
  12                 | T_comma const_inner_def const_def_list

  13  var_def : ptype var_init var_def_list T_semicolon

  14  var_def_list :
  15               | T_comma var_init var_def_list

  16  var_init : T_name
  17           | T_name T_eq expr
  18           | T_name var_init_bra_list

  19  var_init_bra_list : T_lbracket const_expr T_rbracket
  20                    | T_lbracket const_expr T_rbracket var_init_bra_list

  21  routine_header : routine_header_beg T_lparen routine_header_body T_rparen

  22  routine_header_body :
  23                      | ptype formal routine_header_list

  24  routine_header_list :
  25                      | T_comma ptype formal routine_header_list

  26  routine_header_beg : T_PROC T_name
  27                     | T_FUNC ptype T_name

  28  formal : T_name
  29         | T_ampersand T_name
  30         | T_name T_lbracket const_expr T_rbracket formal_end
  31         | T_name T_lbracket T_rbracket formal_end

  32  formal_end :
  33             | T_lbracket const_expr T_rbracket formal_end

  34  routine : routine_header T_semicolon closeScope
  35          | routine_header block closeScope

  36  program_header : T_PROGRAM T_name T_lparen T_rparen

  37  program : openScope program_header block closeScope

  38  openScope :

  39  closeScope :

  40  ptype : T_int
  41        | T_bool
  42        | T_char
  43        | T_REAL

  44  const_expr : expr

  45  expr : T_int_const
  46       | T_real_const
  47       | T_const_char
  48       | T_string_const
  49       | T_true
  50       | T_false
  51       | T_lparen expr T_rparen
  52       | l_value
  53       | call
  54       | T_plus expr
  55       | T_minus expr
  56       | T_NOT expr
  57       | T_not expr
  58       | expr T_plus expr
  59       | expr T_minus expr
  60       | expr T_times expr
  61       | expr T_div expr
  62       | expr T_mod expr
  63       | expr T_MOD expr
  64       | expr T_equal expr
  65       | expr T_not_equal expr
  66       | expr T_greater expr
  67       | expr T_less expr
  68       | expr T_less_equal expr
  69       | expr T_greater_equal expr
  70       | expr T_and expr
  71       | expr T_AND expr
  72       | expr T_OR expr
  73       | expr T_or expr

  74  l_value : T_name expr_list

  75  expr_list :
  76            | T_lbracket expr T_rbracket expr_list

  77  call : T_name T_lparen T_rparen
  78       | T_name T_lparen expr expressions T_rparen

  79  expressions :
  80              | T_comma expr expressions

  81  block : T_lbrace inner_block T_rbrace

  82  inner_block :
  83              | local_def inner_block
  84              | stmt inner_block

  85  local_def : const_def
  86            | var_def

  87  stmt : T_semicolon
  88       | l_value assign expr T_semicolon
  89       | l_value T_plus_plus T_semicolon
  90       | l_value T_minus_minus T_semicolon
  91       | call T_semicolon
  92       | T_if T_lparen expr T_rparen stmt T_else stmt
  93       | T_if T_lparen expr T_rparen stmt
  94       | T_while stoppable T_lparen expr T_rparen stmt
  95       | T_FOR stoppable T_lparen T_name T_comma range T_rparen stmt
  96       | T_do stoppable stmt T_while T_lparen expr T_rparen T_semicolon
  97       | T_switch stoppable T_lparen expr T_rparen T_lbrace inner_switch T_default T_colon clause T_rbrace
  98       | T_switch stoppable T_lparen expr T_rparen T_lbrace inner_switch T_rbrace
  99       | T_break T_semicolon
 100       | T_continue T_semicolon
 101       | T_return T_semicolon
 102       | T_return expr T_semicolon
 103       | openScope block closeScope
 104       | write T_lparen T_rparen T_semicolon
 105       | write T_lparen pformat pformat_list T_rparen T_semicolon

 106  stoppable :

 107  assign : T_eq
 108         | T_plus_equal
 109         | T_minus_equal
 110         | T_mod_equal
 111         | T_div_equal
 112         | T_times_equal

 113  range : expr T_TO expr
 114        | expr T_TO expr T_STEP expr
 115        | expr T_DOWNTO expr
 116        | expr T_DOWNTO expr T_STEP expr

 117  stmt_list :
 118            | stmt stmt_list

 119  clause : stmt_list
 120         | stmt_list T_NEXT T_semicolon

 121  inner_switch :
 122               | switch_exp clause inner_switch

 123  switch_exp : T_case const_expr T_colon
 124             | T_case const_expr switch_exp

 125  pformat_list :
 126               | T_comma pformat pformat_list

 127  write : T_WRITE
 128        | T_WRITELN
 129        | T_WRITESP
 130        | T_WRITESPLN

 131  pformat : expr
 132          | T_FORM T_lparen expr T_comma expr T_rparen
 133          | T_FORM T_lparen expr T_comma expr T_comma expr T_rparen

 134  %entry% : '\001' pmodule

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . pmodule  (134)
	initialization : .  (2)

	.  reduce 2

	pmodule  goto 3
	initialization  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' pmodule .  (134)

	.  reduce 134


state 4
	pmodule : initialization . declaration_list T_eof  (1)
	declaration_list : .  (3)
	openScope : .  (38)

	T_bool  shift 5
	T_char  shift 6
	T_const  shift 7
	T_FUNC  shift 8
	T_int  shift 9
	T_PROC  shift 10
	T_REAL  shift 11
	T_PROGRAM  reduce 38
	T_eof  reduce 3

	declaration_list  goto 12
	declaration  goto 13
	const_def  goto 14
	var_def  goto 15
	routine  goto 16
	routine_header  goto 17
	routine_header_beg  goto 18
	program  goto 19
	ptype  goto 20
	openScope  goto 21


state 5
	ptype : T_bool .  (41)

	.  reduce 41


state 6
	ptype : T_char .  (42)

	.  reduce 42


state 7
	const_def : T_const . ptype const_inner_def const_def_list T_semicolon  (10)

	T_bool  shift 5
	T_char  shift 6
	T_int  shift 9
	T_REAL  shift 11
	.  error

	ptype  goto 22


state 8
	routine_header_beg : T_FUNC . ptype T_name  (27)

	T_bool  shift 5
	T_char  shift 6
	T_int  shift 9
	T_REAL  shift 11
	.  error

	ptype  goto 23


state 9
	ptype : T_int .  (40)

	.  reduce 40


state 10
	routine_header_beg : T_PROC . T_name  (26)

	T_name  shift 24
	.  error


state 11
	ptype : T_REAL .  (43)

	.  reduce 43


state 12
	pmodule : initialization declaration_list . T_eof  (1)

	T_eof  shift 25
	.  error


state 13
	declaration_list : declaration . declaration_list  (4)
	declaration_list : .  (3)
	openScope : .  (38)

	T_bool  shift 5
	T_char  shift 6
	T_const  shift 7
	T_FUNC  shift 8
	T_int  shift 9
	T_PROC  shift 10
	T_REAL  shift 11
	T_PROGRAM  reduce 38
	T_eof  reduce 3

	declaration_list  goto 26
	declaration  goto 13
	const_def  goto 14
	var_def  goto 15
	routine  goto 16
	routine_header  goto 17
	routine_header_beg  goto 18
	program  goto 19
	ptype  goto 20
	openScope  goto 21


state 14
	declaration : const_def .  (5)

	.  reduce 5


state 15
	declaration : var_def .  (6)

	.  reduce 6


state 16
	declaration : routine .  (7)

	.  reduce 7


state 17
	routine : routine_header . T_semicolon closeScope  (34)
	routine : routine_header . block closeScope  (35)

	T_semicolon  shift 27
	T_lbrace  shift 28
	.  error

	block  goto 29


state 18
	routine_header : routine_header_beg . T_lparen routine_header_body T_rparen  (21)

	T_lparen  shift 30
	.  error


state 19
	declaration : program .  (8)

	.  reduce 8


state 20
	var_def : ptype . var_init var_def_list T_semicolon  (13)

	T_name  shift 31
	.  error

	var_init  goto 32


state 21
	program : openScope . program_header block closeScope  (37)

	T_PROGRAM  shift 33
	.  error

	program_header  goto 34


state 22
	const_def : T_const ptype . const_inner_def const_def_list T_semicolon  (10)

	T_name  shift 35
	.  error

	const_inner_def  goto 36


state 23
	routine_header_beg : T_FUNC ptype . T_name  (27)

	T_name  shift 37
	.  error


state 24
	routine_header_beg : T_PROC T_name .  (26)

	.  reduce 26


state 25
	pmodule : initialization declaration_list T_eof .  (1)

	.  reduce 1


state 26
	declaration_list : declaration declaration_list .  (4)

	.  reduce 4


state 27
	routine : routine_header T_semicolon . closeScope  (34)
	closeScope : .  (39)

	.  reduce 39

	closeScope  goto 38


state 28
	block : T_lbrace . inner_block T_rbrace  (81)
	openScope : .  (38)
	inner_block : .  (82)

	T_bool  shift 5
	T_break  shift 39
	T_char  shift 6
	T_const  shift 7
	T_continue  shift 40
	T_do  shift 41
	T_FOR  shift 42
	T_if  shift 43
	T_int  shift 9
	T_REAL  shift 11
	T_return  shift 44
	T_switch  shift 45
	T_while  shift 46
	T_WRITE  shift 47
	T_WRITELN  shift 48
	T_WRITESP  shift 49
	T_WRITESPLN  shift 50
	T_semicolon  shift 51
	T_name  shift 52
	T_lbrace  reduce 38
	T_rbrace  reduce 82

	const_def  goto 53
	var_def  goto 54
	ptype  goto 20
	l_value  goto 55
	call  goto 56
	inner_block  goto 57
	local_def  goto 58
	stmt  goto 59
	write  goto 60
	openScope  goto 61


state 29
	routine : routine_header block . closeScope  (35)
	closeScope : .  (39)

	.  reduce 39

	closeScope  goto 62


state 30
	routine_header : routine_header_beg T_lparen . routine_header_body T_rparen  (21)
	routine_header_body : .  (22)

	T_bool  shift 5
	T_char  shift 6
	T_int  shift 9
	T_REAL  shift 11
	T_rparen  reduce 22

	routine_header_body  goto 63
	ptype  goto 64


state 31
	var_init : T_name .  (16)
	var_init : T_name . T_eq expr  (17)
	var_init : T_name . var_init_bra_list  (18)

	T_eq  shift 65
	T_lbracket  shift 66
	T_semicolon  reduce 16
	T_comma  reduce 16

	var_init_bra_list  goto 67


state 32
	var_def : ptype var_init . var_def_list T_semicolon  (13)
	var_def_list : .  (14)

	T_comma  shift 68
	T_semicolon  reduce 14

	var_def_list  goto 69


state 33
	program_header : T_PROGRAM . T_name T_lparen T_rparen  (36)

	T_name  shift 70
	.  error


state 34
	program : openScope program_header . block closeScope  (37)

	T_lbrace  shift 28
	.  error

	block  goto 71


state 35
	const_inner_def : T_name . T_eq const_expr  (9)

	T_eq  shift 72
	.  error


state 36
	const_def : T_const ptype const_inner_def . const_def_list T_semicolon  (10)
	const_def_list : .  (11)

	T_comma  shift 73
	T_semicolon  reduce 11

	const_def_list  goto 74


state 37
	routine_header_beg : T_FUNC ptype T_name .  (27)

	.  reduce 27


state 38
	routine : routine_header T_semicolon closeScope .  (34)

	.  reduce 34


state 39
	stmt : T_break . T_semicolon  (99)

	T_semicolon  shift 75
	.  error


state 40
	stmt : T_continue . T_semicolon  (100)

	T_semicolon  shift 76
	.  error


state 41
	stmt : T_do . stoppable stmt T_while T_lparen expr T_rparen T_semicolon  (96)
	stoppable : .  (106)

	.  reduce 106

	stoppable  goto 77


state 42
	stmt : T_FOR . stoppable T_lparen T_name T_comma range T_rparen stmt  (95)
	stoppable : .  (106)

	.  reduce 106

	stoppable  goto 78


state 43
	stmt : T_if . T_lparen expr T_rparen stmt T_else stmt  (92)
	stmt : T_if . T_lparen expr T_rparen stmt  (93)

	T_lparen  shift 79
	.  error


state 44
	stmt : T_return . T_semicolon  (101)
	stmt : T_return . expr T_semicolon  (102)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_semicolon  shift 87
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 92
	l_value  goto 93
	call  goto 94


state 45
	stmt : T_switch . stoppable T_lparen expr T_rparen T_lbrace inner_switch T_default T_colon clause T_rbrace  (97)
	stmt : T_switch . stoppable T_lparen expr T_rparen T_lbrace inner_switch T_rbrace  (98)
	stoppable : .  (106)

	.  reduce 106

	stoppable  goto 95


state 46
	stmt : T_while . stoppable T_lparen expr T_rparen stmt  (94)
	stoppable : .  (106)

	.  reduce 106

	stoppable  goto 96


state 47
	write : T_WRITE .  (127)

	.  reduce 127


state 48
	write : T_WRITELN .  (128)

	.  reduce 128


state 49
	write : T_WRITESP .  (129)

	.  reduce 129


state 50
	write : T_WRITESPLN .  (130)

	.  reduce 130


state 51
	stmt : T_semicolon .  (87)

	.  reduce 87


state 52
	l_value : T_name . expr_list  (74)
	call : T_name . T_lparen T_rparen  (77)
	call : T_name . T_lparen expr expressions T_rparen  (78)
	expr_list : .  (75)

	T_lparen  shift 97
	T_lbracket  shift 98
	T_and  reduce 75
	T_case  reduce 75
	T_DOWNTO  reduce 75
	T_MOD  reduce 75
	T_or  reduce 75
	T_STEP  reduce 75
	T_TO  reduce 75
	T_eq  reduce 75
	T_rparen  reduce 75
	T_plus  reduce 75
	T_minus  reduce 75
	T_times  reduce 75
	T_equal  reduce 75
	T_greater  reduce 75
	T_less  reduce 75
	T_less_equal  reduce 75
	T_greater_equal  reduce 75
	T_not_equal  reduce 75
	T_mod  reduce 75
	T_mod_equal  reduce 75
	T_plus_equal  reduce 75
	T_minus_equal  reduce 75
	T_div_equal  reduce 75
	T_times_equal  reduce 75
	T_minus_minus  reduce 75
	T_plus_plus  reduce 75
	T_OR  reduce 75
	T_AND  reduce 75
	T_div  reduce 75
	T_semicolon  reduce 75
	T_colon  reduce 75
	T_comma  reduce 75
	T_rbracket  reduce 75

	expr_list  goto 99


state 53
	local_def : const_def .  (85)

	.  reduce 85


state 54
	local_def : var_def .  (86)

	.  reduce 86


state 55
	stmt : l_value . assign expr T_semicolon  (88)
	stmt : l_value . T_plus_plus T_semicolon  (89)
	stmt : l_value . T_minus_minus T_semicolon  (90)

	T_eq  shift 100
	T_mod_equal  shift 101
	T_plus_equal  shift 102
	T_minus_equal  shift 103
	T_div_equal  shift 104
	T_times_equal  shift 105
	T_minus_minus  shift 106
	T_plus_plus  shift 107
	.  error

	assign  goto 108


state 56
	stmt : call . T_semicolon  (91)

	T_semicolon  shift 109
	.  error


state 57
	block : T_lbrace inner_block . T_rbrace  (81)

	T_rbrace  shift 110
	.  error


state 58
	inner_block : local_def . inner_block  (83)
	openScope : .  (38)
	inner_block : .  (82)

	T_bool  shift 5
	T_break  shift 39
	T_char  shift 6
	T_const  shift 7
	T_continue  shift 40
	T_do  shift 41
	T_FOR  shift 42
	T_if  shift 43
	T_int  shift 9
	T_REAL  shift 11
	T_return  shift 44
	T_switch  shift 45
	T_while  shift 46
	T_WRITE  shift 47
	T_WRITELN  shift 48
	T_WRITESP  shift 49
	T_WRITESPLN  shift 50
	T_semicolon  shift 51
	T_name  shift 52
	T_lbrace  reduce 38
	T_rbrace  reduce 82

	const_def  goto 53
	var_def  goto 54
	ptype  goto 20
	l_value  goto 55
	call  goto 56
	inner_block  goto 111
	local_def  goto 58
	stmt  goto 59
	write  goto 60
	openScope  goto 61


state 59
	inner_block : stmt . inner_block  (84)
	openScope : .  (38)
	inner_block : .  (82)

	T_bool  shift 5
	T_break  shift 39
	T_char  shift 6
	T_const  shift 7
	T_continue  shift 40
	T_do  shift 41
	T_FOR  shift 42
	T_if  shift 43
	T_int  shift 9
	T_REAL  shift 11
	T_return  shift 44
	T_switch  shift 45
	T_while  shift 46
	T_WRITE  shift 47
	T_WRITELN  shift 48
	T_WRITESP  shift 49
	T_WRITESPLN  shift 50
	T_semicolon  shift 51
	T_name  shift 52
	T_lbrace  reduce 38
	T_rbrace  reduce 82

	const_def  goto 53
	var_def  goto 54
	ptype  goto 20
	l_value  goto 55
	call  goto 56
	inner_block  goto 112
	local_def  goto 58
	stmt  goto 59
	write  goto 60
	openScope  goto 61


state 60
	stmt : write . T_lparen T_rparen T_semicolon  (104)
	stmt : write . T_lparen pformat pformat_list T_rparen T_semicolon  (105)

	T_lparen  shift 113
	.  error


state 61
	stmt : openScope . block closeScope  (103)

	T_lbrace  shift 28
	.  error

	block  goto 114


state 62
	routine : routine_header block closeScope .  (35)

	.  reduce 35


state 63
	routine_header : routine_header_beg T_lparen routine_header_body . T_rparen  (21)

	T_rparen  shift 115
	.  error


state 64
	routine_header_body : ptype . formal routine_header_list  (23)

	T_ampersand  shift 116
	T_name  shift 117
	.  error

	formal  goto 118


state 65
	var_init : T_name T_eq . expr  (17)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 119
	l_value  goto 93
	call  goto 94


state 66
	var_init_bra_list : T_lbracket . const_expr T_rbracket  (19)
	var_init_bra_list : T_lbracket . const_expr T_rbracket var_init_bra_list  (20)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	const_expr  goto 120
	expr  goto 121
	l_value  goto 93
	call  goto 94


state 67
	var_init : T_name var_init_bra_list .  (18)

	.  reduce 18


state 68
	var_def_list : T_comma . var_init var_def_list  (15)

	T_name  shift 31
	.  error

	var_init  goto 122


state 69
	var_def : ptype var_init var_def_list . T_semicolon  (13)

	T_semicolon  shift 123
	.  error


state 70
	program_header : T_PROGRAM T_name . T_lparen T_rparen  (36)

	T_lparen  shift 124
	.  error


state 71
	program : openScope program_header block . closeScope  (37)
	closeScope : .  (39)

	.  reduce 39

	closeScope  goto 125


state 72
	const_inner_def : T_name T_eq . const_expr  (9)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	const_expr  goto 126
	expr  goto 121
	l_value  goto 93
	call  goto 94


state 73
	const_def_list : T_comma . const_inner_def const_def_list  (12)

	T_name  shift 35
	.  error

	const_inner_def  goto 127


state 74
	const_def : T_const ptype const_inner_def const_def_list . T_semicolon  (10)

	T_semicolon  shift 128
	.  error


state 75
	stmt : T_break T_semicolon .  (99)

	.  reduce 99


state 76
	stmt : T_continue T_semicolon .  (100)

	.  reduce 100


state 77
	stmt : T_do stoppable . stmt T_while T_lparen expr T_rparen T_semicolon  (96)
	openScope : .  (38)

	T_break  shift 39
	T_continue  shift 40
	T_do  shift 41
	T_FOR  shift 42
	T_if  shift 43
	T_return  shift 44
	T_switch  shift 45
	T_while  shift 46
	T_WRITE  shift 47
	T_WRITELN  shift 48
	T_WRITESP  shift 49
	T_WRITESPLN  shift 50
	T_semicolon  shift 51
	T_name  shift 52
	T_lbrace  reduce 38

	l_value  goto 55
	call  goto 56
	stmt  goto 129
	write  goto 60
	openScope  goto 61


state 78
	stmt : T_FOR stoppable . T_lparen T_name T_comma range T_rparen stmt  (95)

	T_lparen  shift 130
	.  error


state 79
	stmt : T_if T_lparen . expr T_rparen stmt T_else stmt  (92)
	stmt : T_if T_lparen . expr T_rparen stmt  (93)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 131
	l_value  goto 93
	call  goto 94


state 80
	expr : T_false .  (50)

	.  reduce 50


state 81
	expr : T_not . expr  (57)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 132
	l_value  goto 93
	call  goto 94


state 82
	expr : T_true .  (49)

	.  reduce 49


state 83
	expr : T_lparen . expr T_rparen  (51)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 133
	l_value  goto 93
	call  goto 94


state 84
	expr : T_plus . expr  (54)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 134
	l_value  goto 93
	call  goto 94


state 85
	expr : T_minus . expr  (55)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 135
	l_value  goto 93
	call  goto 94


state 86
	expr : T_NOT . expr  (56)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 136
	l_value  goto 93
	call  goto 94


state 87
	stmt : T_return T_semicolon .  (101)

	.  reduce 101


state 88
	expr : T_real_const .  (46)

	.  reduce 46


state 89
	expr : T_const_char .  (47)

	.  reduce 47


state 90
	expr : T_string_const .  (48)

	.  reduce 48


state 91
	expr : T_int_const .  (45)

	.  reduce 45


state 92
	expr : expr . T_plus expr  (58)
	expr : expr . T_minus expr  (59)
	expr : expr . T_times expr  (60)
	expr : expr . T_div expr  (61)
	expr : expr . T_mod expr  (62)
	expr : expr . T_MOD expr  (63)
	expr : expr . T_equal expr  (64)
	expr : expr . T_not_equal expr  (65)
	expr : expr . T_greater expr  (66)
	expr : expr . T_less expr  (67)
	expr : expr . T_less_equal expr  (68)
	expr : expr . T_greater_equal expr  (69)
	expr : expr . T_and expr  (70)
	expr : expr . T_AND expr  (71)
	expr : expr . T_OR expr  (72)
	expr : expr . T_or expr  (73)
	stmt : T_return expr . T_semicolon  (102)

	T_and  shift 137
	T_MOD  shift 138
	T_or  shift 139
	T_plus  shift 140
	T_minus  shift 141
	T_times  shift 142
	T_equal  shift 143
	T_greater  shift 144
	T_less  shift 145
	T_less_equal  shift 146
	T_greater_equal  shift 147
	T_not_equal  shift 148
	T_mod  shift 149
	T_OR  shift 150
	T_AND  shift 151
	T_div  shift 152
	T_semicolon  shift 153
	.  error


state 93
	expr : l_value .  (52)

	.  reduce 52


state 94
	expr : call .  (53)

	.  reduce 53


state 95
	stmt : T_switch stoppable . T_lparen expr T_rparen T_lbrace inner_switch T_default T_colon clause T_rbrace  (97)
	stmt : T_switch stoppable . T_lparen expr T_rparen T_lbrace inner_switch T_rbrace  (98)

	T_lparen  shift 154
	.  error


state 96
	stmt : T_while stoppable . T_lparen expr T_rparen stmt  (94)

	T_lparen  shift 155
	.  error


state 97
	call : T_name T_lparen . T_rparen  (77)
	call : T_name T_lparen . expr expressions T_rparen  (78)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_rparen  shift 156
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 157
	l_value  goto 93
	call  goto 94


state 98
	expr_list : T_lbracket . expr T_rbracket expr_list  (76)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 158
	l_value  goto 93
	call  goto 94


state 99
	l_value : T_name expr_list .  (74)

	.  reduce 74


state 100
	assign : T_eq .  (107)

	.  reduce 107


state 101
	assign : T_mod_equal .  (110)

	.  reduce 110


state 102
	assign : T_plus_equal .  (108)

	.  reduce 108


state 103
	assign : T_minus_equal .  (109)

	.  reduce 109


state 104
	assign : T_div_equal .  (111)

	.  reduce 111


state 105
	assign : T_times_equal .  (112)

	.  reduce 112


state 106
	stmt : l_value T_minus_minus . T_semicolon  (90)

	T_semicolon  shift 159
	.  error


state 107
	stmt : l_value T_plus_plus . T_semicolon  (89)

	T_semicolon  shift 160
	.  error


state 108
	stmt : l_value assign . expr T_semicolon  (88)

	T_false  shift 80
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 161
	l_value  goto 93
	call  goto 94


state 109
	stmt : call T_semicolon .  (91)

	.  reduce 91


state 110
	block : T_lbrace inner_block T_rbrace .  (81)

	.  reduce 81


state 111
	inner_block : local_def inner_block .  (83)

	.  reduce 83


state 112
	inner_block : stmt inner_block .  (84)

	.  reduce 84


state 113
	stmt : write T_lparen . T_rparen T_semicolon  (104)
	stmt : write T_lparen . pformat pformat_list T_rparen T_semicolon  (105)

	T_false  shift 80
	T_FORM  shift 162
	T_not  shift 81
	T_true  shift 82
	T_lparen  shift 83
	T_rparen  shift 163
	T_plus  shift 84
	T_minus  shift 85
	T_NOT  shift 86
	T_name  shift 52
	T_real_const  shift 88
	T_const_char  shift 89
	T_string_const  shift 90
	T_int_const  shift 91
	.  error

	expr  goto 164
	l_value  goto 93
	call  goto 94
	pformat  goto 165


state 114
	stmt : openScope block . closeScope  (103)
	closeScope : .  (39)

	.  reduce 39

	closeScope  goto 166


state 115
	routine_header : routine_header_beg T_lparen routine_header_body T_rparen .  (21)

	.  reduce 21


state 116
	formal : T_ampersand . T_name  (29)

	T_name  shift 167
	.  error


state 117
	formal : T_name .  (28)
	formal : T_name . T_lbracket const_expr T_rbracket formal_end  (30)
	formal : T_name . T_lbracket T_rbracket formal_end  (31)

	T_lbracket  shift 168
	T_rparen  reduce 28
	T_comma  reduce 28


state 118
	routine_header_body : ptype formal . routine_header_list  (23)
	routine_header_list : .  (24)

	T_comma  shift 169
	T_rparen  reduce 24

	routine_header_list  goto 170


state 119
	var_init : T_name T_eq expr .  (17)
	expr : expr . T_plus expr  (58)
	expr : expr . T_minus expr  (59)
	expr : expr . T_times expr  (60)
	expr : expr . T_div expr  (61)
	expr : expr . T_mod expr  (62)
	expr : expr . T_MOD expr  (63)
	expr : expr . T_equal expr  (64)
	expr : expr . T_not_equal expr  (65)
	expr : expr . T_greater expr  (66)
	expr : expr . T_less expr  (67)
	expr : expr . T_less_equal expr  (68)
	expr : expr . T_greater_equal expr  (69)
	expr : expr . T_and expr  (70)
	expr : expr . T_AND expr  (71)
	expr : expr . T_OR expr  (72)
	expr : expr . T_or expr  (73)

	T_and  shift 137
	T_MOD  shift 138
	T_or  shift 139
	T_plus  shift 140
	T_minus  shift 141
	T_times  shift 142
	T_equal  shift 143
	T_greater  shift 144
	T_less  shift 145
	T_less_equal  shift 146
	T_greater_equal  shift 147
	T_not_equal  shift 148
	T_mod  shift 149
	T_OR  shift 150
	T_AND  shift 151
	T_div  shift 152
	T_semicolon  reduce 17
	T_comma  reduce 17


state 120
	var_init_bra_list : T_lbracket const_expr . T_rbracket  (19)
	var_init_bra_list : T_lbracket const_expr . T_rbracket var_init_bra_list  (20)

	T_rbracket  shift 171
	.  error


state 121
	const_expr : expr .  (44)
	expr : expr . T_plus expr  (58)
	expr : expr . T_minus expr  (59)
	expr : expr . T_times expr  (60)
	expr : expr . T_div expr  (61)
	expr : expr . T_mod expr  (62)
	expr : expr . T_MOD expr  (63)
	expr : expr . T_equal expr  (64)
	expr : expr . T_not_equal expr  (65)
	expr : expr . T_greater expr  (66)
	expr : expr . T_less expr  (67)
	expr : expr . T_less_equal expr  (68)
	expr : expr . T_greater_equal expr  (69)
	expr : expr . T_and expr  (70)
	expr : expr . T_AND expr  (71)
	expr : expr . T_OR expr  (72)
	expr : expr . T_or expr  (73)

	T_and  shift 137
	T_MOD  shift 138
	T_or  shift 139
	T_plus  shift 140
	T_minus  shift 141
	T_times  shift 142
	T_equal  shift 143
	T_greater  shift 144
	T_less  shift 145
	T_less_equal  shift 146
	T_greater_equal  shift 147
	T_not_equal  shift 148
	T_mod  shift 149
	T_OR  shift 150
	T_AND  shift 151
	T_div  shift 152
	T_case  reduce 44
	T_semicolon  reduce 44
	T_colon  reduce 44
	T_comma  reduce 44
	T_rbracket  reduce 44


state 122
	var_def_list : T_comma var_init . var_def_list  (15)
	var_def_list : .  (14)

	T_comma  shift 68
	T_semicolon  reduce 14

	var_def_list  goto 172


state 123
	var_def : ptype var_init var_def_list T_semicolon .  (13)

	.  reduce 13


state 124
	program_header : T_PROGRAM T_name T_lparen . T_rparen  (36)
